--- a/css/main.css
+++ b/css/main.css
@@ -124,3 +124,99 @@ label.star:before {
 .glyphicon-heart {
     color: crimson;
 }
+
+/*===================
+  Button + Overlay
+  ===================*/
+  /*styling open close button*/
+  .button {
+  	display:inline;
+  	position:absolute;
+  	right:50px;
+  	top:6px;
+  	z-index:999;
+  	font-size:2em;
+  }
+  .button a {
+  	text-decoration:none;
+  }
+  .btn-open:after {
+  	color:#333;
+  	content:"\f0c9";
+  	font-family:"FontAwesome";
+  	transition-property:all .2s linear 0s;
+  	-moz-transition:all .2s linear 0s;
+  	-webkit-transition:all .2s linear 0s;
+  	-o-transition:all .2s linear 0s;
+  }
+  .btn-open:hover:after {
+  	color:#34B484;
+  }
+  .btn-close:after {
+  	color:#fff;
+  	content:"\f00d";
+  	font-family:"FontAwesome";
+  	transition-property:all .2s linear 0s;
+  	-moz-transition:all .2s linear 0s;
+  	-webkit-transition:all .2s linear 0s;
+  	-o-transition:all .2s linear 0s;
+  }
+  .btn-close:hover:after {
+  	color: #34B484;
+  }
+  /*overlay*/
+  .overlay {
+  	display:none;
+  	position:fixed;
+  	top:0;
+  	height:100%;
+  	width:100%;
+  	background:#333;
+  	overflow:auto;
+  	z-index:99;
+  }
+
+  /*Gambar*/
+  .desc_ImageOverlay{
+    text-decoration: none;
+    position:relative;
+    display: block;
+    float: left;
+    overflow: hidden;
+    width:100%;
+    max-height: 250px;
+    background: none 50%;
+    background-size: cover;
+  }
+  .desc_ImageOverlay .desc{
+    font: 16px/20px sans-serif;
+    color:#fff;
+    text-align:center;
+    padding:24px 16px;
+    transform: translateY(30%); -webkit-transform: translateY(30%);
+    transition: 0.5s;           -webkit-transition: 0.5s;
+  }
+  .desc_ImageOverlay .desc p{
+    transition: 0.5s; -webkit-transition: 0.5s;
+    opacity:0;
+  }
+  /*hover*/
+  .desc_ImageOverlay:hover .desc{
+    transform: translateY(0%); -webkit-transform: translateY(0%);
+    background: rgba(255,255,255, 0.5);
+  }
+  .desc_ImageOverlay:hover .desc p{
+    opacity:1;
+    color: #000;
+  }
+
+
+  .desc_ImageOverlay:hover h2 {
+  	visibility: hidden;
+  }
+
+  /*Bootstrap*/
+  .category {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
